--- a/inventory/templates/inventory.html
+++ b/inventory/templates/inventory.html
@@ -5,59 +5,67 @@
 <div class="list-group w-auto">
 
   <div class="alert alert-danger hidden" role="alert">
-    Submitting the tips failed.
+    Submitting the inventory failed.
   </div>
 
   <div class="alert alert-success hidden" role="alert">
-    Tips submitted successfully.
+    Inventory submitted successfully.
   </div>
+
+
 
   <form id="form" method="post">
     {% csrf_token %}
-    <div class="list-group w-auto">
-    {% for user in users %}
-      <a class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
-        <span data-feather="user" style="width: 40px; height: 40px; stroke-width: 1;"></span>
-        <div class="d-flex gap-2 w-100 justify-content-between">
-          <div>
-            <input type="text" name="user" value="{{user.id}}" style="display: none;" />
-            <h6 class="mb-0">
-              {% if user.first_name and user.last_name %}
-                {{ user.first_name }} {{ user.last_name }}
-              {% else %}
-                {{ user.get_username }}
-              {% endif %}
-            </h6>
-            <p class="mb-0 opacity-75">
-              {% for group in user.groups.all %}
-                {{ group.name }}
-              {% endfor %}
-            </p>
-          </div>
-          <div style="display: flex; flex-direction: row; gap: 0.5rem;">
-            <input name="amount" type="number" step="0.0" required class="form-control" id="tip" value="0.0" style="max-width: 100px;">
-            <small class="opacity-50 text-nowrap">€</small>
-          </div>
+
+    {% for category in categories %}
+    
+      <h1 class="h2" style="margin-bottom: 1rem;">{{ category }}</h1>
+
+      <div class="list-group w-auto">
+        {% for product in products %}
+          {% if category in product.category.all %}
+            <a class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+              <span data-feather="box" style="width: 40px; height: 40px; stroke-width: 1;"></span>
+              <div class="d-flex gap-2 w-100 justify-content-between">
+                <div>
+                  <input type="number" name="product" value="{{product.id}}" style="display: none;" />
+                  <h6 class="mb-0">
+                    {{ product.name }}
+                  </h6>
+                  <p class="mb-0 opacity-75">
+                  </p>
+                </div>
+                <div style="display: flex; flex-direction: row; gap: 0.5rem;">
+                  <input name="value" type="number" step="0.0" required class="form-control" id="tip" value="0.0" style="max-width: 100px;">
+                  <small class="opacity-50 text-nowrap">
+                    {{ product.unit.all | join:", " }}
+                  </small>
+                </div>
+              </div>
+            </a>
+            {% endif %}
+          {% endfor %}
         </div>
-      </a>
-      {% endfor %}
-    </div>
-    <input type="submit" class="w-100 btn btn-lg btn-outline-primary" value="Submit tips" style="margin-top: 1rem; max-width: 200px;" />
+        <br><br>
+
+    {% endfor %}
+
+    <input type="submit" class="w-100 btn btn-lg btn-outline-primary" value="Submit inventory" style="margin-bottom: 1rem; max-width: 250px;" />
   </form>
 
-  <div class="modal fade" id="submitTipsModal" tabindex="-1" role="dialog" aria-labelledby="submitTipsModalLabel" aria-hidden="true">
+  <div class="modal fade" id="submitInventoryModal" tabindex="-1" role="dialog" aria-labelledby="submitInventoryModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="submitTipsModalLabel">Warning</h5>
+          <h5 class="modal-title" id="submitInventoryModalLabel">Warning</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          Tips have already been submitted for today. Are you sure you want to add further tips?
+          Inventory have already been submitted for today. Are you sure you want to update it?
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-          <button type="button" class="btn btn-primary" id="confirmSubmit">Submit tips</button>
+          <button type="button" class="btn btn-primary" id="confirmSubmit">Update inventory</button>
         </div>
       </div>
     </div>
@@ -79,11 +87,11 @@
 
       let objSerializedForm = {};
       for (let [name, value] of form_data) {
-        if (name === "user") {
-          userid = value;
+        if (name === "product") {
+          product = value;
         }
-        if (name === "amount") {
-          objSerializedForm[userid] = value;
+        if (name === "value") {
+          objSerializedForm[product] = value;
         }
       }
 
@@ -100,7 +108,7 @@
           }
         }
       }
-      request.open('POST', '/tips/');
+      request.open('POST', '/inventory/');
       request.setRequestHeader("X-CSRFToken", csrftoken); 
       request.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
       request.send(JSON.stringify(objSerializedForm));
@@ -109,11 +117,11 @@
 
     document.addEventListener("DOMContentLoaded", function() {
 
-      var submitTipsModal = new bootstrap.Modal(document.getElementById("submitTipsModal"), {});
+      var submitInventoryModal = new bootstrap.Modal(document.getElementById("submitInventoryModal"), {});
 
       document.getElementById('confirmSubmit').onclick = function() {
         submitForm();
-        submitTipsModal.hide();
+        submitInventoryModal.hide();
       }
 
       document.getElementById('form').onsubmit = function (evt) {
@@ -121,7 +129,7 @@
         evt.preventDefault();
 
         if (isSubmittedToday) {
-          submitTipsModal.show();
+          submitInventoryModal.show();
         } else {
           submitForm();
         }
