--- a/tasks/templates/base_generic.html
+++ b/tasks/templates/base_generic.html
@@ -67,7 +67,12 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">
+                {% url 'inventory' as inventory_url %}
+                {% if request.path == inventory_url %}
+                <a class="nav-link active" href="{% url 'inventory' %}">
+                {% else %}
+                <a class="nav-link" href="{% url 'inventory' %}">
+                {% endif %}
                   <span data-feather="layers" class="align-text-bottom"></span>
                   Inventory
                 </a>
