--- a/inventory/templates/inventory_evaluation.html
+++ b/inventory/templates/inventory_evaluation.html
@@ -20,6 +20,7 @@
   <table class="table table-hover">
     <thead>
       <tr>
+        <th scope="col" width="1%"></th>
         <th scope="col">Name</th>
         <th scope="col">Category</th>
         <th scope="col">To buy</th>
@@ -28,13 +29,57 @@
     <tbody>
       {% for product in products %}
       <tr {%if product.value_tobuy < 0 %} style="background: #ea868f;"{% endif %} >
-        <td>{{ product.name }}</td>
-        <td>{{ product.category.all|join:", " }}</td>
-        <td style="white-space: nowrap;">{{ product.value_tobuy }} {{ product.unit.all|join:", " }}</td>
+        <td><input type="checkbox" id="checkbox{{forloop.counter}}"></td>
+        <td><label for="checkbox{{forloop.counter}}">{{ product.name }}</label></td>
+        <td><label for="checkbox{{forloop.counter}}">{{ product.category.all|join:", " }}</label></td>
+        <td style="white-space: nowrap;"><label for="checkbox{{forloop.counter}}">{{ product.value_tobuy }} {{ product.unit.all|join:", " }}</label></td>
       </tr>
       {% endfor %}
     </tbody>
   </table>
 </div>
 
+<style>
+  label {
+    width: 100%;
+    padding: .5rem .5rem;
+    user-select: none;
+  }
+  td:not(first-child) {
+    padding: 0 !important;
+  }
+  td:first-child {
+    padding: .5rem .5rem !important;
+  }
+</style>
+<script>
+
+  window.onload = function() {
+    var i, l,
+        trs = document.getElementsByTagName('tr');
+
+    for (i = 0, l = trs.length; i < l; i++) {
+        attachClickHandler(trs[i]);
+    }
+  };
+
+  function clickHandler()
+  {
+      if (this.isSelected) { // expando properties. sorry, compat again
+          // change color, check checkbox, whatever
+          this.isSelected = false;
+      } else {
+          // opposite of above
+          this.isSelected = true;
+      }
+  }
+
+  function attachClickHandler(tr)
+  {
+      tr.onclick = function() {
+        clickHandler.call(tr);
+      };
+  }
+
+</script>
 {% endblock %}
