--- a/inventory/templates/inventory.html
+++ b/inventory/templates/inventory.html
@@ -17,7 +17,7 @@
 
     {% for category in categories %}
     
-      <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center mb-3">        
+      <div class="sticky d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center mb-3">        
         <h1 class="h2">{{ category }}</h1>
         {% if forloop.counter == 1 %}
         <div class="btn-toolbar mb-2 mb-md-0">
@@ -66,7 +66,7 @@
                   </p>
                 </div>
                 <div style="display: flex; flex-direction: row; gap: 0.5rem;">
-                  <input name="value" type="number" step="0.0" required class="form-control" id="value" value="" style="width: 100px;">
+                  <input name="value" type="number" inputmode="decimal" step="0.01" required class="form-control" id="value" value="" style="width: 100px;">
                   <small class="opacity-50 text-nowrap truncate">
                     {{ product.unit.all | join:", " }}
                   </small>
@@ -171,6 +171,12 @@
   </script>
 
 <style>
+.sticky {
+  position: sticky;
+  top: 60px;
+  z-index: 100;
+  background: white;
+}
 .truncate {
   width: 30px;
   white-space: nowrap;
