--- a/inventory/templates/inventory.html
+++ b/inventory/templates/inventory.html
@@ -66,7 +66,7 @@
                   </p>
                 </div>
                 <div style="display: flex; flex-direction: row; gap: 0.5rem;">
-                  <input name="value" type="text" inputmode="decimal" class="form-control" id="value" value="" style="width: 100px;">
+                  <input name="value" type="text" pattern="[+-]?([0-9]*[.,])?[0-9]+" inputmode="decimal" class="form-control" id="value" value="" style="width: 100px;">
                   <small class="opacity-50 text-nowrap truncate">
                     {{ product.unit.all | join:", " }}
                   </small>
