--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -1,14 +1,14 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-
+    
     {% if task_list %}
 
     <div class="list-group w-auto">
     
       {% for task in task_list %}
       <label class="list-group-item d-flex gap-3">
-        <input class="form-check-input flex-shrink-0" type="checkbox" value="" style="font-size: 1.375em;">
+        <input class="form-check-input flex-shrink-0" type="checkbox" style="font-size: 1.375em;" {% if task.done %}checked{% endif %}>
         <span class="pt-1 form-checked-content">
           {{ task.title }}
           <small class="d-block text-muted" style="margin: 0.1rem 0;">
