--- a/tasks/templates/base_generic.html
+++ b/tasks/templates/base_generic.html
@@ -117,6 +117,17 @@
                   Tips
                 </a>
               </li>
+              <li class="nav-item">
+                {% url 'tasks_evaluation' as tasks_evaluation_url %}
+                {% if request.path == tasks_evaluation_url %}
+                <a class="nav-link active" href="{% url 'tasks_evaluation' %}">
+                {% else %}
+                <a class="nav-link" href="{% url 'tasks_evaluation' %}">
+                {% endif %}
+                  <span data-feather="file-text" class="align-text-bottom"></span>
+                  Tasks
+                </a>
+              </li>
             </ul>
             {% endif %}
 
