--- a/iaroapp/templates/base_generic.html
+++ b/iaroapp/templates/base_generic.html
@@ -87,8 +87,9 @@
                 </a>
               </li>
             </ul>
-
-            {% if user.is_superuser %}
+            
+            {% load is_member%}
+            {% if user.is_superuser or user|is_member:'Barista'  %}
             <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
               <span>Reports</span>
             </h6>
@@ -104,6 +105,7 @@
                   Inventory
                 </a>
               </li>
+              {% if user.is_superuser %}
               <li class="nav-item">
                 {% url 'evaluation' as evaluation_url %}
                 {% if request.path == evaluation_url %}
@@ -126,6 +128,7 @@
                   Tasks
                 </a>
               </li>
+              {% endif %}
             </ul>
             {% endif %}
 
