--- a/tips/templates/tips.html
+++ b/tips/templates/tips.html
@@ -16,15 +16,14 @@
     Tips submitted successfully.
   </div>
 
-  <form id="automaticTipForm" method="post">
+  <div id="calculator" style="margin-bottom: 15px">
     <h5>Tip calculator</h5>
-    {% csrf_token %}
     <div style="display: flex; flex-direction: row; gap: 0.5rem;">
-      <input name="amount" type="text" pattern="[+-]?([0-9]*[.,])?[0-9]+" inputmode="decimal" required class="form-control" id="tip" value="0.0" style="max-width: 100px;">
+      <input id="calcTipAmount" type="text" pattern="[+-]?([0-9]*[.,])?[0-9]+" inputmode="decimal" required class="form-control" id="tip" value="0.0" style="max-width: 100px;">
       <small class="opacity-50 text-nowrap">€</small>
     </div>
-    <input type="submit" class="w-100 btn btn-lg btn-primary" value="calculate tips" style="margin-top: 1rem; max-width: 200px;">
-  </form>
+    <button id="calculateTip" class="w-100 btn btn-lg btn-primary" style="margin-top: 1rem; max-width: 200px;">Calculate Tip</button>
+  </div>
 
   <form id="manualTipForm" method="post">
     <h5>Manual tip upload</h5>
@@ -79,6 +78,8 @@
   <script>
 
     var isSubmittedToday = ('{{ isSubmittedToday | safe }}' === 'True');
+
+    function calcTip(){}
 
     function submitForm() {
 
@@ -140,6 +141,13 @@
         } else {
           submitForm();
         }
+
+      }
+
+      document.getElementById('calculateTip'). = function (evt){
+
+        evt.preventDefault();
+        calcTip();
 
       }
 
