--- a/tips/templates/tips.html
+++ b/tips/templates/tips.html
@@ -16,17 +16,7 @@
     Tips submitted successfully.
   </div>
 
-  <form id="calculator" style="margin-bottom: 15px" method="get">
-    <h5>Tip calculator</h5>
-    <div style="display: flex; flex-direction: row; gap: 0.5rem;">
-      <input id="calcTipAmount" type="text" pattern="[+-]?([0-9]*[.,])?[0-9]+" inputmode="decimal" required class="form-control" name="tip" value="0.0" style="max-width: 100px;">
-      <small class="opacity-50 text-nowrap">€</small>
-    </div>
-    <input type="submit" id="calculateTip" class="w-100 btn btn-lg btn-primary" style="margin-top: 1rem; max-width: 200px;" value="Calculate tip">
-  </form>
-
-  <form id="manualTipForm" method="post">
-    <h5>Manual tip upload</h5>
+  <form id="form" method="post">
     {% csrf_token %}
     <div class="list-group w-auto">
     {% for user in users %}
@@ -47,7 +37,7 @@
             </p>
           </div>
           <div style="display: flex; flex-direction: row; gap: 0.5rem;">
-            <input name="amount" type="text" pattern="[+-]?([0-9]*[.,])?[0-9]+" inputmode="decimal" required class="form-control" id="tip" value="{{user.tip}}" style="max-width: 100px;">
+            <input name="amount" type="text" pattern="[+-]?([0-9]*[.,])?[0-9]+" inputmode="decimal" required class="form-control" id="tip" value="0.0" style="max-width: 100px;">
             <small class="opacity-50 text-nowrap">€</small>
           </div>
         </div>
@@ -87,7 +77,7 @@
         var alert = alerts[i];
         alert.classList.add('hidden');
       }
-      var form = document.querySelector('#manualTipForm');
+      var form = document.querySelector('form');
       var form_data = new FormData(form);
 
       let objSerializedForm = {};
@@ -130,7 +120,7 @@
         submitTipsModal.hide();
       }
 
-      document.getElementById('manualTipForm').onsubmit = function (evt) {
+      document.getElementById('form').onsubmit = function (evt) {
       
         evt.preventDefault();
 
