--- a/iaroapp/templates/base_generic.html
+++ b/iaroapp/templates/base_generic.html
@@ -75,6 +75,8 @@
                   Inventory
                 </a>
               </li>
+              {% load is_member %}
+              {% if user.is_superuser or user|is_member:'Barista' %}
               <li class="nav-item">
                 {% url 'tips' as tips_url %}
                 {% if request.path == tips_url %}
@@ -86,6 +88,7 @@
                   Tips
                 </a>
               </li>
+              {% endif %}
             </ul>
             
             {% load is_member%}
