--- a/inventory/templates/inventory_evaluation.html
+++ b/inventory/templates/inventory_evaluation.html
@@ -13,6 +13,8 @@
 </div>
 
 <div style="width: 100%;">
+  {% for seller in sellers%}
+  <h4>{{ seller }}</h4>
   <table class="table table-hover">
     <thead>
       <tr>
@@ -24,17 +26,18 @@
     </thead>
     <tbody>
       {% for product in products %}
-      {%if product.tobuy %}
-      <tr>
-        <td><input type="checkbox" id="checkbox{{forloop.counter}}"></td>
-        <td><label for="checkbox{{forloop.counter}}">{{ product.name }}</label></td>
-        <td><label for="checkbox{{forloop.counter}}">{{ product.category.all|join:", " }}</label></td>
-        <td><label for="checkbox{{forloop.counter}}">{{ product.value_tobuy|floatformat:2 }} {{ product.unit.all|join:", " }}</label></td>
-      </tr>
-      {% endif %}
+        {%if product.tobuy and product.display_seller == seller %}
+        <tr>
+          <td><input type="checkbox" id="checkbox{{forloop.counter}}"></td>
+          <td><label for="checkbox{{forloop.counter}}">{{ product.name }}</label></td>
+          <td><label for="checkbox{{forloop.counter}}">{{ product.category.all|join:", " }}</label></td>
+          <td><label for="checkbox{{forloop.counter}}">{{ product.value_tobuy|floatformat:2 }} {{ product.unit.all|join:", " }}</label></td>
+        </tr>
+        {% endif %}
       {% endfor %}
     </tbody>
   </table>
+  {% endfor %}
 </div>
 
 <style>
