--- a/iaroapp/templates/index.html
+++ b/iaroapp/templates/index.html
@@ -235,6 +235,30 @@
             </div>
 
             <div class="col-lg-4 mb-4">
+                <div class="card h-100" id="notes">
+                    <div class="card-header pb-0">
+                        <h6>Your Notes</h6>
+                        <p class="text-sm"><i class="fas fa-sticky-note pe-2 text-success"></i>Stay on top of things!
+                            Add and view your notes here.</p>
+                    </div>
+                    <div class="card-body p-3">
+                        <h6>Received Today</h6>
+                        <ul>
+                            {% for note in received_notes %}
+                                <li>
+                                    <img src="{{ note.sender.profile.avatar.url }}"
+                                         alt="{{ note.sender.username }}'s avatar"
+                                         style="width: 40px; height: 40px; border-radius: 50%; background-color: #3acaeb">
+                                    {{ note.timestamp|time }} - From {{ note.sender.username }}: {{ note.content }}
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="col-lg-4 mb-4">
                 <div class="card h-100" id="holidays">
                     <div class="card-header pb-0">
                         <h6>Holidays</h6>
